--- a/IQuad2/Views/Home/About.cshtml
+++ b/IQuad2/Views/Home/About.cshtml
@@ -14,14 +14,7 @@
 
         <div class="carousel-inner">
             <div class=" item active">
-                <img src="~/Pictures/About-image.jpg" />
-
-                <div class="container">
-                    <div class="carousel-caption">
-                        <p style=" color:black; font-size:15px;'Agency FB'"><b>I-Quad Medical Appointment System</b></p>
-                        <h1 style="color:black; font-family:'Agency FB'"><b>THE TEAM OF EXCELLENCE</b></h1>
-                    </div>
-                </div>
+                <img src="~/Pictures/aboutus1.jpg" />
 
             </div>
         </div>
@@ -31,12 +24,14 @@
 
 </div>
 
+<div style="text-align:center;">
+    <h2 style="color:black">I-QUAD THE TEAM OF EXCELLENCE</h2>
+</div>
 
-
-
+<br />
 
 <div style="text-align:center;">
-    <h2 style="color:black">About I-Quad</h2>
+    <h2 style="color:black;"> About I-Quad Team</h2>
 
     <p>
         I-Quad is a developing team comprising of four specialized members from the Northern Caribbean University.
@@ -46,6 +41,7 @@
         build it".
     </p>
 </div>
+
 
 <br />
 
