--- a/IQuad2/Views/Shared/_Layout.cshtml
+++ b/IQuad2/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     <div class="col-md-3 mb-5">
                         <h3>Latest News</h3>
                         <ul class="footer-link list-unstyled">
-                            <li><a href="#">Health Care Professional News</a></li>
+                            <li><a href="https://edition.cnn.com/health">Health Care Professional News</a></li>
                             <li><a href="#">Events &amp; Conferences</a></li>
                         </ul>
                     </div>
