--- a/IQuad2/Views/Appointment/Set_Appointment.cshtml
+++ b/IQuad2/Views/Appointment/Set_Appointment.cshtml
@@ -59,7 +59,8 @@
                     dateFormat: 'dd-M-yy',
                     changeMonth: true,
                     changeYear: true,
-                    yearRange: "2015:2025"
+                    yearRange: "2015:2025",
+                    // gotoCurrent: true.... implement this a next time 
 
                 });
 
