--- a/IQuad2/Views/Appointment/Index.cshtml
+++ b/IQuad2/Views/Appointment/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<IQuad2.Models.User>
+﻿@model IEnumerable<IQuad2.Models.ApplicationUser>
 @*
     Note: I've set the model for this view to IEnumerable<Customer>.
     This is a simple interface implemented by the list class. Since
