--- a/IQuad2/Views/Shared/_Layout.cshtml
+++ b/IQuad2/Views/Shared/_Layout.cshtml
@@ -45,17 +45,13 @@
                     </div>
                     <div class="col-md-3 mb-5">
                         <h3>Location &amp; Contact</h3>
-                        <p class="mb-5">134 Street Name, Kingston, Jamaica</p>
+                        <p></p>
+                        <p class="mb-5"> <b>Address:</b> 123 White Hall,Kingston 5, Jamaica</p>
 
-                        <h4 class="text-uppercase mb-3 h6 text-white">
-                            Email
-                        </h4>
-                        <p class="mb-5"><a href="mailto:i-Quad@gmail.com">i-QuadMAS@gmail.com</a></p>
+                         <p class="mb-5"> <b>Email:</b> <a href="mailto:i-Quad@gmail.com"> i-QuadMAS@gmail.com</a></p>
 
-                        <h4 class="text-uppercase mb-3 h6 text-white">
-                            Phone
-                        </h4>
-                        <p>+1 876 435 3533</p>
+                         <p class="mb-5"><b> Phone:</b> (876) 963-8754 / (876) 963-7371</p>
+
 
                     </div>
                 </div>
