--- a/IQuad2/Views/Appointment/Index.cshtml
+++ b/IQuad2/Views/Appointment/Index.cshtml
@@ -11,11 +11,11 @@
 *@
 
 @{
-    ViewBag.Title = "users";
+    ViewBag.Title = "user";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Users</h2>
+<h2>User</h2>
 <p>
     @Html.ActionLink("Set_Appointment", "Set_Appointment", "Appointment", null, new { @class = "btn btn-primary" })
 </p>
