--- a/IQuad2/Views/Appointment/Set_Appointment.cshtml
+++ b/IQuad2/Views/Appointment/Set_Appointment.cshtml
@@ -33,7 +33,7 @@
     <div class="form-group">
 
         <label>Doctors</label>
-        @Html.DropDownListFor(m => m.Doctor, new SelectList(Model.Doctor, "UserTypeId", "Fname"), "Select Doctor", new { @class = "form-control" })
+        @Html.DropDownListFor(m => m.Doctors, new SelectList(Model.Doctors, "Id", "Fname"), "Select Doctor", new { @class = "form-control" })
 
 
 
