background image for log in

--- a/IQuad2/Views/Home/Index.cshtml
+++ b/IQuad2/Views/Home/Index.cshtml
@@ -72,13 +72,13 @@
 
     <div class="row">
 
-        <div class="col-md-3 p-0 one-col element-animate">
+        <div class="col-md-3 p-0 one-col element-animate">  
             <div>
                 <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
                     <img src="~/Pictures/icon3_0004_.jpg" alt="Image Placeholder" class="img-fluid">
                     <div class="media-body">
                         <h3 class="mt-0 text-black">Ophthalmology</h3>
-                        <p>Ophthalmology is the branch of medicine that deals with the anatomy, physiology and diseases of the eye. All evaluations that purport to diagnose eye disease should be carried out by a physician. ... Since ophthalmologists perform operations on eyes, they are considered to be both surgical and medical specialists</p>
+                        <p>Ophthalmology is the branch of medicine that deals with the anatomy, physiology and diseases of the eye. All evaluations that purport to diagnose eye disease should be carried out by a physician. ... Since ophthalmologists perform operations on eyes, they are considered to be both surgical and medical specialists.</p>
                     </div>
                 </div>
             </div>
