--- a/IQuad2/Content/Site.css
+++ b/IQuad2/Content/Site.css
@@ -22,3 +22,12 @@ select,
 textarea {
     max-width: 280px;
 }
+.bg{
+    background-image:url(Pictures/About-image.jpg);
+    background-position:center;
+    background-repeat:no-repeat;
+    background-size:cover;
+    float:none;
+
+
+}
