--- a/IQuad2/Views/Appointment/Index.cshtml
+++ b/IQuad2/Views/Appointment/Index.cshtml
@@ -15,29 +15,34 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>User</h2>
-<p>
-    @Html.ActionLink("Set_Appointment", "Set_Appointment", "Appointment", null, new { @class = "btn btn-primary" })
-</p>
+<h2>Users</h2>
 
-<table id="customers" class="table table-bordered table-hover">
+
+<table id="appointment" class="table table-bordered table-hover">
     <thead>
+
         <tr>
-            <th>User</th>
-            <th>user Type</th>
-           
+            <th>View Appointments</th>
+            <th>First Name</th>
+            <th>First Lame</th>
+
+
         </tr>
+
     </thead>
     <tbody>
-        @foreach (var user in Model)
+        @foreach (var users in Model)
         {
-            <tr>
+        <tr>
 
-                <td> @user.Fname</td>
-                <td>@user.Lname</td>
-               
+            <td>@Html.ActionLink("<==>","Details", "Appointment", new { id = users.Id }, null) </td>
+            <td>@users.Fname</td>
+            <td>@users.Lname</td>
+           
 
-            </tr>
+
+
+        </tr>
         }
 
     </tbody>
