--- a/IQuad2/Views/Account/Register.cshtml
+++ b/IQuad2/Views/Account/Register.cshtml
@@ -61,12 +61,7 @@
             @Html.TextBoxFor(m => m.Parish, new { @class = "form-control" })
         </div>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.UserTypeId, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.UserTypeId, new { @class = "form-control" })
-        </div>
-    </div>
+
 
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
@@ -86,6 +81,19 @@
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.UserTypeId, new { @class = "col-md-2 control-label" })
+
+        <div class="col-md-10">
+            @Html.RadioButtonFor(m => m.UserTypeId, "Patient", new { @class = "radio-inline" }) @Html.Label("Patient")
+            @Html.RadioButtonFor(m => m.UserTypeId, "Receptionist", new { @class = "radio-inline" }) @Html.Label("Receptionist")
+            @Html.RadioButtonFor(m => m.UserTypeId, "Doctor", new { @class = "radio-inline" }) @Html.Label("Doctor")
+            @Html.RadioButtonFor(m => m.UserTypeId, "Admin", new { @class = "radio-inline" }) @Html.Label("Admin")
+        </div>
+    </div>
+
+
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
