--- a/IQuad2/Views/Appointment/Index.cshtml
+++ b/IQuad2/Views/Appointment/Index.cshtml
@@ -35,13 +35,11 @@
         {
         <tr>
 
-            <td>@Html.ActionLink("<==>","Details", "Appointment", new { id = users.Id }, null) </td>
+            <td>@Html.ActionLink("<==>","Edit", "Appointment", new { id = users.Id }, null) </td>
             <td>@users.Fname</td>
             <td>@users.Lname</td>
+
            
-
-
-
         </tr>
         }
 
