--- a/IQuad2/Views/Shared/_NavBar.cshtml
+++ b/IQuad2/Views/Shared/_NavBar.cshtml
@@ -13,6 +13,9 @@
                 <li>@Html.ActionLink("Home", "Index", "Home")</li>
                 <li>@Html.ActionLink("About", "About", "Home")</li>
                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                <li>@Html.ActionLink("Appointments", "Set_Appointment", "Appointment")</li>
+
+
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
