--- a/IQuad2/Views/Appointment/AppointmentForm.cshtml
+++ b/IQuad2/Views/Appointment/AppointmentForm.cshtml
@@ -39,7 +39,9 @@
         @Html.ValidationMessageFor(m => m.appointment.DoctorId)
     </div>
     @Html.HiddenFor(m => m.appointment.Id);
-    @Html.HiddenFor(m => m.Patients);
+    @Html.HiddenFor(m => m.Patients)
+    @Html.AntiForgeryToken()
+    
 
 
     <button type="submit" class="btn btn-primary">Save Appointment</button>
