--- a/IQuad2/Views/Shared/_AdminNavBar.cshtml
+++ b/IQuad2/Views/Shared/_AdminNavBar.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="navbar navbar-inverse navbar-fixed-top">
+﻿
+<div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -6,13 +7,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("I-Quad Appointment", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("I-Quad Appointment", "Index", "Admin", new { area = "" }, new { @class = "navbar-brand" })
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                <li>@Html.ActionLink("About", "About", "Home")</li>
-                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                <li>@Html.ActionLink("Home", "Index", "Admin")</li>
+               
+                
                 <li>@Html.ActionLink("Appointments", "Index", "Appointment")</li>
 
 
@@ -26,7 +27,7 @@
 
                 }
             </ul>
-            @Html.Partial("_LoginPartial")
+            @Html.Partial("_AdminLoginPartial")
         </div>
     </div>
 </div>
