--- a/IQuad2/Views/Shared/_Header.cshtml
+++ b/IQuad2/Views/Shared/_Header.cshtml
@@ -1,14 +1,7 @@
 ﻿<div class="topbar">
     <!-- LOGO -->
     <div class="topbar-left">
-        <a href="/dashboard" class="logo">
-            <span>
-                <img src="~/images/logo-light.png" alt="" height="18">
-            </span>
-            <i>
-                <img src="~/images/logo-sm.png" alt="" height="22">
-            </i>
-        </a>
+        <h1 style="color:white"> I-QUAD</h1>
     </div>
 
     <nav class="navbar-custom">
@@ -120,9 +113,27 @@
                         <i class="mdi mdi-view-dashboard"></i><span class="badge badge-primary badge-pill float-right">2</span> <span> Dashboard </span>
                     </a>
                 </li>
+
+
+
+                <li>
+                    <a href="/" class="waves-effect">
+                        <i class="mdi mdi-view-dashboard"></i><span class="badge badge-primary badge-pill float-right">3</span> <span> Doctors </span>
+                    </a>
+
+                </li>
+
+
                 <li>
                     <a href="@Url.Action("Calendar","Dashboard")" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Calendar </span></a>
                 </li>
+
+
+
+                <li>
+                    <a href="@Url.Action("Calendar","Dashboard")" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Add Roles </span></a>
+                </li>
+
 
                 <li>
                     <a href="javascript:void(0);" class="waves-effect"><i class="mdi mdi-email-outline"></i><span> Email <span class="float-right menu-arrow"><i class="mdi mdi-chevron-right"></i></span> </span></a>
@@ -130,116 +141,13 @@
                         <li><a href="/email/inbox">Inbox</a></li>
                         <li><a href="/email/read">Email Read</a></li>
                         <li><a href="/email/compose">Email Compose</a></li>
-                    </ul>
-                </li>
-
-                <li class="menu-title">Components</li>
-
-                <li>
-                    <a href="javascript:void(0);" class="waves-effect"><i class="mdi mdi-buffer"></i> <span> UI Elements <span class="float-right menu-arrow"><i class="mdi mdi-chevron-right"></i></span> </span> </a>
-                    <ul class="submenu">
-                        <li><a href="/ui/alerts">Alerts</a></li>
-                        <li><a href="/ui/buttons">Buttons</a></li>
-                        <li><a href="/ui/badges">Badge</a></li>
-                        <li><a href="/ui/cards">Cards</a></li>
-                        <li><a href="/ui/Carousels">Carousel</a></li>
-                        <li><a href="/ui/dropdowns">Dropdowns</a></li>
-                        <li><a href="/ui/grid">Grid</a></li>
-                        <li><a href="/ui/images">Images</a></li>
-                        <li><a href="/ui/lightbox">Lightbox</a></li>
-                        <li><a href="/ui/Modals">Modals</a></li>
-                        <li><a href="/ui/pagination">Pagination</a></li>
-                        <li><a href="/ui/PopoverTooltips">Popover & Tooltips</a></li>
-                        <li><a href="/dashboard/RangeSlider">Range Slider</a></li>
-                        <li><a href="/dashboard/SessionTimeout">Session Timeout</a></li>
-                        <li><a href="/ui/Progressbars">Progress Bars</a></li>
-                        <li><a href="/ui/SweetAlerts">Sweet-Alert</a></li>
-                        <li><a href="/ui/TabAccordions">Tabs & Accordions</a></li>
-                        <li><a href="/ui/typography">Typography</a></li>
-                        <li><a href="/ui/video">Video</a></li>
-
 
                     </ul>
                 </li>
 
-                <li>
-                    <a href="javascript:void(0);" class="waves-effect"><i class="mdi mdi-clipboard-outline"></i><span> Forms <span class="badge badge-pill badge-success float-right">6</span> </span></a>
-                    <ul class="submenu">
-                        <li><a href="/forms/elements">Form Elements</a></li>
-                        <li><a href="/forms/validation">Form Validation</a></li>
-                        <li><a href="/forms/advanced">Form Advanced</a></li>
-                        <li><a href="/forms/editors">Form Editors</a></li>
-                        <li><a href="/forms/uploads">Form File Upload</a></li>
-                        <li><a href="/forms/xeditable">Form Xeditable</a></li>
+              
 
-                    </ul>
-                </li>
-
-                <li>
-                    <a href="javascript:void(0);" class="waves-effect"><i class="mdi mdi-chart-line"></i><span> Charts <span class="float-right menu-arrow"><i class="mdi mdi-chevron-right"></i></span> </span></a>
-                    <ul class="submenu">
-                        <li><a href="/chart/morris">Morris Chart</a></li>
-                        <li><a href="/chart/chartist">Chartist Chart</a></li>
-                        <li><a href="/chart/chartjs">Chartjs Chart</a></li>
-                        <li><a href="/chart/flot">Flot Chart</a></li>
-                        <li><a href="/chart/c3">C3 Chart</a></li>
-                        <li><a href="/chart/other">Jquery Knob Chart</a></li>
-                    </ul>
-                </li>
-
-                <li>
-                    <a href="javascript:void(0);" class="waves-effect"><i class="mdi mdi-format-list-bulleted-type"></i><span> Tables <span class="float-right menu-arrow"><i class="mdi mdi-chevron-right"></i></span> </span></a>
-                    <ul class="submenu">
-                        <li><a href="/table/basic">Basic Tables</a></li>
-                        <li><a href="/table/datatable">Data Table</a></li>
-                        <li><a href="/table/responsive">Responsive Table</a></li>
-                        <li><a href="/table/editable">Editable Table</a></li>
-                    </ul>
-                </li>
-
-                <li>
-                    <a href="javascript:void(0);" class="waves-effect"><i class="mdi mdi-album"></i> <span> Icons  <span class="float-right menu-arrow"><i class="mdi mdi-chevron-right"></i></span></span> </a>
-                    <ul class="submenu">
-                        <li><a href="/icon/material">Material Design</a></li>
-                        <li><a href="/icon/ion">Ion Icons</a></li>
-                        <li><a href="/icon/fontawesome">Font Awesome</a></li>
-                        <li><a href="/icon/themify">Themify Icons</a></li>
-                        <li><a href="/icon/dripicons">Dripicons</a></li>
-                        <li><a href="/icon/typicons">Typicons Icons</a></li>
-                    </ul>
-                </li>
-
-                <li>
-                    <a href="javascript:void(0);" class="waves-effect"><i class="mdi mdi-google-maps"></i><span> Maps <span class="badge badge-pill badge-danger float-right">2</span> </span></a>
-                    <ul class="submenu">
-                        <li><a href="/maps/google"> Google Map</a></li>
-                        <li><a href="/maps/vector"> Vector Map</a></li>
-                    </ul>
-                </li>
-
-                <li class="menu-title">Extras</li>
-
-                <li>
-                    <a href="javascript:void(0);" class="waves-effect"><i class="mdi mdi-account-location"></i><span> Authentication <span class="float-right menu-arrow"><i class="mdi mdi-chevron-right"></i></span> </span></a>
-                    <ul class="submenu">
-                        <li><a href="/pages/login">Login</a></li>
-                        <li><a href="/pages/register">Register</a></li>
-                        <li><a href="/pages/RecoverPassword">Recover Password</a></li>
-                        <li><a href="/pages/lockscreen">Lock Screen</a></li>
-                    </ul>
-                </li>
-
-                <li>
-                    <a href="javascript:void(0);" class="waves-effect"><i class="mdi mdi-google-pages"></i><span> Extra Pages <span class="float-right menu-arrow"><i class="mdi mdi-chevron-right"></i></span> </span></a>
-                    <ul class="submenu">
-                        <li><a href="/pages/timeline">Timeline</a></li>
-                        <li><a href="/pages/invoice">Invoice</a></li>
-                        <li><a href="/pages/directory">Directory</a></li>
-                        <li><a href="/pages/blank">Blank Page</a></li>
-                        <li><a href="/pages/BadRequest">Error 404</a></li>
-                        <li><a href="/pages/InternalServerError">Error 500</a></li>
-                    </ul>
-                </li>
+              
 
             </ul>
 
