--- a/IQuad2/Views/Appointment/AppointmentForm.cshtml
+++ b/IQuad2/Views/Appointment/AppointmentForm.cshtml
@@ -23,7 +23,7 @@
     <div class="form-group">
 
         @Html.LabelFor(m => m.appointment.StartTime)
-        @Html.TextBoxFor(m => m.appointment.StartTime, new { @class = "form-control timepicker" })
+        @Html.TextBoxFor(m => m.appointment.StartTime,  new { @class = "form-control timepicker", required = "required"})
         @Html.ValidationMessageFor(m => m.appointment.StartTime)
     </div>
     <div class="form-group">
@@ -71,6 +71,9 @@
             });
             $(document).ready(function () {
                 $('input.timepicker').timepicker({
+                  
+                    minTime: '8:00:00',
+                    maxTime: '17:00:00'
                 });
             });
 
