--- a/IQuad2/Views/Appointment/ReadIndex.cshtml
+++ b/IQuad2/Views/Appointment/ReadIndex.cshtml
@@ -6,38 +6,38 @@
 }
 
 <h2>Appointments</h2>
+<div class="bk">
+    <table id="appointment" class="table table-bordered table-hover bkg">
+        <thead>
 
-
-<table id="appointment" class="table table-bordered table-hover">
-    <thead>
-
-        <tr>
-
-
-            <th>Patient Name</th>
-            <th>Purpose Of Visit</th>
-            <th>Doctor Name</th>
-            <th>Date</th>
-            <th>Start Time </th>
-            <th>End Time</th>
-
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var appointment in Model)
-        {
             <tr>
 
-                <td>@appointment.Patient.Fname @appointment.Patient.Lname</td>
-                <td>@appointment.PurposeOfVisit</td>
-                <td>@appointment.Doctor.Fname @appointment.Doctor.Lname</td>
-                <td>@appointment.Date.ToLongDateString()</td>
-                <td>@appointment.StartTime.ToLongTimeString()</td>
-                <td>@appointment.EndTime.ToLongTimeString()</td>
+
+                <th>Patient Name</th>
+                <th>Purpose Of Visit</th>
+                <th>Doctor Name</th>
+                <th>Date</th>
+                <th>Start Time </th>
+                <th>End Time</th>
 
             </tr>
-        }
+        </thead>
+        <tbody>
 
-    </tbody>
-</table>
+            @foreach (var appointment in Model)
+            {
+                <tr>
 
+                    <td>@appointment.Patient.Fname @appointment.Patient.Lname</td>
+                    <td>@appointment.PurposeOfVisit</td>
+                    <td>@appointment.Doctor.Fname @appointment.Doctor.Lname</td>
+                    <td>@appointment.Date.ToLongDateString()</td>
+                    <td>@appointment.StartTime.ToLongTimeString()</td>
+                    <td>@appointment.EndTime.ToLongTimeString()</td>
+
+                </tr>
+            }
+
+        </tbody>
+    </table>
+</div>
