--- a/IQuad2/Views/Home/Index.cshtml
+++ b/IQuad2/Views/Home/Index.cshtml
@@ -245,40 +245,10 @@
                 <h3><b>Make an Appointment</b></h3>
                 <p>And we will contact you.</p>
 
-                <div class="row">
-                    <div class="col-lg-12 d-flex flex-column">
-                        <input  style="border-color:black;" name="patient-name" placeholder="Full Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Patient Name'" class="form-control mt-20" required="" type="text">
-                    </div>
-
-                    <div class="col-lg-12 d-flex flex-column">
-                        <br />
-                        <input  style="border-color:black;" name="phone" placeholder="Phone" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Phone'" class="form-control mt-20" required="" type="text">
-                    </div>
-
-                    <div class="col-lg-12 d-flex flex-column">
-                        <br />
-                        <input  style="border-color:black;" name="email" placeholder="Email address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email address'" class="form-control mt-20" required="" type="email">
-                    </div>
-
-                    <div class="col-lg-12 d-flex flex-column">
-                        <br />
-                        <input  style="border-color:black;" name="dob" placeholder="Date of birth" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Date of birth'" class="form-control mt-20" required="" type="text" id="datepicker">
-                    </div>
-
-                    <div class="col-lg-12 d-flex flex-column">
-                        <br />
-                        <input  style="border-color:black;" name="appoinment-date" placeholder="Appoinment date" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Appoinment date'" class="form-control mt-20" required="" type="text" id="datepicker2">
-                    </div>
-
-                    <div class="col-lg-12 flex-column">
-                        <br />
-                        <textarea  style="border-color:black;" rows="5" class="form-control mt-20" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
-                    </div>
-
-                    <div class="col-lg-12 d-flex justify-content-end send-btn">
-                        <br />
-                        <button class="btn btn-primary" type="submit">Confirm Booking</button>
-                    </div>
+                <div class="col-lg-12 d-flex flex-column">
+              
+                    <div class="btn btn-primary">@Html.ActionLink("Set an Appointment", "Set_Appointment", "Appointment") </div>
+                  
                     <br />
                     <div class="alert-msg"></div>
                 </div>
