--- a/IQuad2/Views/Shared/_Layout.cshtml
+++ b/IQuad2/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
 </head>
 <body>
     @Html.Partial("_NavBar")
+    <li>@Html.ActionLink("Role Manager", "Index", "Roles")</li>
 
 
 
@@ -40,7 +41,7 @@
                         </ul>
                     </div>
                     <div class="col-md-3 mb-5">
-                          <h3> <span class="glyphicon glyphicon-user"></span> Developers</h3>
+                        <h3> <span class="glyphicon glyphicon-user"></span> Developers</h3>
                         <ul class="footer-link list-unstyled">
                             <li>Johnoy Mendez</li>
                             <li>Raheem Robinson</li>
